--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ before_install:
   - sudo apt-get update -qq
   - npm config set strict-ssl false
 language: node_js
+node_js:
+  - '10'
 script: 'npm run coverage'
 after_script: 'npm run coveralls'
