--- a/package.json
+++ b/package.json
@@ -1,62 +1,63 @@
 {
-  "name": "node-7z-forall",
-  "version": "1.0.4",
-  "description": "A Node.js wrapper for 7-Zip with platform binaries",
-  "main": "lib/index.js",
-  "scripts": {
-    "test": "mocha",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha --dir .tmp/coverage",
-    "coveralls": "npm install coveralls && cat .tmp/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "install": "node installer.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/techno-express/node-7z.git"
-  },
-  "keywords": [
-    "node",
-    "7z",
-    "7za",
-    "7zr",
-    "p7zip",
-    "7zip",
-    "binary",
-    "wrapper"
-  ],
-  "author": "Quentin Rossetti <quentin.rossetti@gmail.com>",
-  "contributors": [
-    "HelloGravity",
-    "sketchpunk",
-    "Dannii Willis <curiousdannii@gmail.com>",
-    "redx25 <red.mage25@gmail.com>",
-    "l. stubbs <technoexpressnet@gmail.com>"
-  ],
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/techno-express/node-7z/issues"
-  },
-  "homepage": "https://github.com/quentinrossetti/node-7zip.git",
-  "files": [
-    "*.js",
-    "LICENSE",
-    "README.md",
-    "lib",
-    "test",
-    "util"
-  ],
-  "dependencies": {
-    "when": "^3.7.8",
-    "cross-spawn": "^6.0.5",
-    "all-unpacker": "^0.1.3",
-    "fs-extra": "^8.0.0",
-    "macos-release": "^2.0.0",
-    "node-wget": "^0.4.2",
-    "retrying-promise": "^0.0.4",
-    "system-installer": "^1.1.0"
-  },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "istanbul": "^0.4.5",
-    "mocha": "^6.1.4"
-  }
+    "name": "node-7z-forall",
+    "version": "1.0.4",
+    "description": "A Node.js wrapper for 7-Zip with platform binaries",
+    "main": "lib/index.js",
+    "scripts": {
+        "test": "mocha",
+        "coverage": "istanbul cover node_modules/mocha/bin/_mocha --dir .tmp/coverage",
+        "coveralls": "npm install coveralls && cat .tmp/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+        "install": "node installer.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/techno-express/node-7z.git"
+    },
+    "keywords": [
+        "node",
+        "7z",
+        "7za",
+        "7zr",
+        "p7zip",
+        "7zip",
+        "binary",
+        "wrapper"
+    ],
+    "author": "Quentin Rossetti <quentin.rossetti@gmail.com>",
+    "contributors": [
+        "HelloGravity",
+        "sketchpunk",
+        "Dannii Willis <curiousdannii@gmail.com>",
+        "redx25 <red.mage25@gmail.com>",
+        "l. stubbs <technoexpressnet@gmail.com>",
+        "František Gič <frantisek.gic@gmail.com>"
+    ],
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/techno-express/node-7z/issues"
+    },
+    "homepage": "https://github.com/quentinrossetti/node-7zip.git",
+    "files": [
+        "*.js",
+        "LICENSE",
+        "README.md",
+        "lib",
+        "test",
+        "util"
+    ],
+    "dependencies": {
+        "when": "^3.7.8",
+        "cross-spawn": "^6.0.5",
+        "all-unpacker": "^0.1.3",
+        "fs-extra": "^8.0.0",
+        "macos-release": "^2.0.0",
+        "node-wget": "^0.4.2",
+        "retrying-promise": "^0.0.4",
+        "system-installer": "^1.1.0"
+    },
+    "devDependencies": {
+        "chai": "^4.1.2",
+        "istanbul": "^0.4.5",
+        "mocha": "^6.1.4"
+    }
 }
