--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "Dannii Willis <curiousdannii@gmail.com>",
         "redx25 <red.mage25@gmail.com>",
         "l. stubbs <technoexpressnet@gmail.com>",
-        "František Gič <frantisek.gic@gmail.com>"
+        "František Gič <frantisek.gic@gmail.com>",
+        "Oskar Larsson Högfeldt <g@oskar-lh.name>"
     ],
     "license": "ISC",
     "bugs": {
