--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
         "all-unpacker": "^0.1.3",
         "fs-extra": "^8.0.0",
         "macos-release": "^2.0.0",
-        "node-wget": "^0.4.2",
         "retrying-promise": "^0.0.4",
-        "system-installer": "^1.1.0"
+        "system-installer": "^1.1.0",
+        "wget-improved": "3.2.1"
     },
     "devDependencies": {
         "chai": "^4.1.2",
