--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "node-7z-forall",
-    "version": "1.0.9",
+    "version": "1.1.0",
     "description": "A Node.js wrapper for 7-Zip with platform binaries",
     "main": "lib/index.js",
     "scripts": {
         "test": "mocha",
+        "coverage": "npx nyc@latest --reporter json --reporter text mocha -R list test/*.js && codecov -f coverage/coverage-final.json",
         "install": "node installer.js"
     },
     "repository": {
@@ -45,17 +46,18 @@
         "util"
     ],
     "dependencies": {
-        "all-unpacker": "^0.1.5",
+        "all-unpacker": "^0.1.6",
         "cross-spawn": "^7.0.3",
         "fs-extra": "^8.0.0",
-        "macos-release": "^2.0.0",
-        "node-wget-js": "^0.4.4",
+        "macos-release": "^2.4.1",
+        "node-wget-fetch": "^1.0.0",
         "retrying-promise": "^0.0.4",
         "system-installer": "^1.1.0",
         "when": "^3.7.8"
     },
     "devDependencies": {
-        "chai": "^4.1.2",
+        "chai": "^4.2.0",
+        "codecov": "^3.8.0",
         "mocha": "^6.2.0"
     }
 }
