update, build bug fixes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "lib/index.js",
     "scripts": {
         "test": "mocha",
-        "coverage": "npx nyc@latest --reporter json --reporter text mocha -R list test/*.js && codecov -f coverage/coverage-final.json",
+        "coverage": "npx nyc@latest --reporter json --reporter text mocha --dir .tmp/coverage && codecov -f coverage/coverage-final.json",
         "install": "node installer.js"
     },
     "repository": {
