--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-7z-forall",
-    "version": "1.1.5",
+    "version": "1.1.6",
     "description": "A Node.js wrapper for 7-Zip with platform binaries",
     "main": "lib/index.js",
     "scripts": {
@@ -20,7 +20,12 @@
         "p7zip",
         "7zip",
         "binary",
-        "wrapper"
+        "wrapper",
+        "Mac OS X",
+        "Windows",
+        "Linux",
+        "Apple",
+        "cross-platform"
     ],
     "author": "Quentin Rossetti <quentin.rossetti@gmail.com>",
     "contributors": [
@@ -42,7 +47,6 @@
         "LICENSE",
         "README.md",
         "lib",
-        "test",
         "util"
     ],
     "dependencies": {
