--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "scripts": {
         "test": "mocha",
-        "coverage": "npx nyc@latest --reporter json --reporter text mocha --dir .tmp/coverage && codecov -f coverage/coverage-final.json",
+        "coverage": "npx nyc@latest --reporter json --reporter text mocha -r esm  --reporter=spec \"test/**/*.js\" --timeout=0 && codecov -f coverage/coverage-final.json",
         "install": "node installer.js"
     },
     "repository": {
@@ -69,6 +69,7 @@
         "when": "^3.7.8"
     },
     "devDependencies": {
+        "esm": "^3.2.25",
         "chai": "^4.2.0",
         "codecov": "^3.8.0",
         "mocha": "^7.2.0"
