--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "./module": "./lib/esm/index.mjs"
     },
     "scripts": {
-        "test": "mocha",
-        "coverage": "npx nyc@latest --reporter json --reporter text mocha -r esm  --reporter=spec \"test/**/*.js\" --timeout=0 && codecov -f coverage/coverage-final.json",
+        "test": "mocha --recursive test/",
+        "coverage": "npx nyc@latest --reporter json --reporter text mocha --recursive test/ --timeout=0 && codecov -f coverage/coverage-final.json",
         "install": "node installer.js"
     },
     "repository": {
@@ -69,9 +69,8 @@
         "when": "^3.7.8"
     },
     "devDependencies": {
-        "esm": "^3.2.25",
         "chai": "^4.2.0",
         "codecov": "^3.8.0",
-        "mocha": "^7.2.0"
+        "mocha": "^8.2.0"
     }
 }
