added main method that creates the Sfx package and test, update readme.md and package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "node-7z-forall",
     "version": "2.1.0",
-    "description": "A CommonJs and ESM wrapper for 7-Zip, pulling in binaries for Linux, Windows, and Mac OSX, with methods to create SFX self extracting 7z archives targeting a different platform.",
+    "description": "A CommonJs and ESM frontend to 7-Zip, downloads binaries in for Linux, Windows, and Mac OSX, with methods to create SFX self extracting 7z archives targeting different platforms.",
     "type": "commonjs",
     "main": "lib/index.js",
     "exports": {
