--- a/package.json
+++ b/package.json
@@ -60,16 +60,16 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "all-unpacker": "^0.1.13",
+    "all-unpacker": "^0.1.14",
     "cross-spawn": "^7.0.3",
-    "fs-extra": "^9.0.1",
-    "macos-release": "^2.4.1",
+    "fs-extra": "^9.1.0",
+    "macos-release": "^2.5.0",
     "node-wget-fetch": "1.0.5",
-    "system-installer": "^1.1.5",
+    "system-installer": "^1.1.6",
     "when": "^3.7.8"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^8.2.0"
+    "chai": "^4.3.4",
+    "mocha": "9.1.2"
   }
 }
